install/tibero-istiogateway/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: disable-mtls-for-all
spec:
  host: "*.hyperdata.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
